--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: objective-c
+osx_image: xcode11.3
 xcode_project: itlwm.xcodeproj # path to your xcodeproj folder
 xcode_scheme: itlwm
 xcode_destination: platform=macOS
